# fakeidp

./: .gitignore  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
.scripts/: benchmark.sh  codecov.sh  token_request.json
keys/: create_pub_pem.sh  public_key.der
src/: auth.rs  checks.rs  discovery.rs  errors.rs  main.rs  token.rs  userinfo.rs
static/: login.js  main.css
template/: login.html
test/: claim.json  create1.json  curl-examples.sh  get_openid-configuration.sh  get_token.sh  search.json  search2.json  search_all.json
