[package]
authors = ["Olger Warnier <olger@spectare.nl>"]
edition = "2021"
name = "fakeidp"
version = "1.0.3"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-service = "2.0.2"
actix-web = "4.8.0"
actix-4-jwt-auth = "1.2.3"
#actix-4-jwt-auth = { path = "../actix-4-jwt-auth" }
actix-files = "0.6.6"
biscuit = "0.7.0"
#biscuit = { path = "../biscuit/" }
bytes = "1.7.0"
chrono = "0.4"
num = "0.4"
clap = {version = "4.5.11", features = ["derive", "unicode", "env"]}
der-parser = "9.0.0"
env_logger = "0.11.5"
futures = "0.3.30"
futures-core = {version = "0.3.29", default-features = false, features = ["alloc"]}
futures-util = {version = "0.3.29", default-features = false, features = ["alloc"]}
#num = "0.3"
tokio = {version = "1.39.2", features = ["full"]}
nanoid = "0.4.0"
pem = "3.0.4"
ring = "0.17.8"
webpki = "0.22.4"
mio = "1.0.1"
openssl = "0.10.66"
data-encoding = "2.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sysinfo = "0.31.0"
reqwest = {version = "0.12", features = ["json", "blocking"]}

# [profile.release]
# debug = true

# [patch.crates-io]
# actix-http = {git = "https://github.com/actix/actix-web.git"}
